--- a/firstProjectReact/src/components/Superheroes/Superhero/Superhero.css
+++ b/firstProjectReact/src/components/Superheroes/Superhero/Superhero.css
@@ -15,3 +15,16 @@
   border-radius:50px;
   object-fit: cover;
 }
+
+.superhero .more-details {
+  margin-top: 15px;
+  font-weight: bold;
+  color: #007BFF;
+  cursor: pointer;
+}
+
+.superhero .details {
+  margin-top: 10px;
+  font-style: italic;
+  color: #555;
+}
